--- a/views/files.ejs
+++ b/views/files.ejs
@@ -11,11 +11,16 @@
           </div>
           <div class="flex flex-1 justify-end gap-8">
             
-            <button
-              class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-xl h-10 px-4 bg-[#293038] text-white text-sm font-bold leading-normal tracking-[0.015em]"
+            <a href="/log-out">
+                <button
+              class="flex min-w-[84px] max-w-[480px] cursor-pointer items-center justify-center overflow-hidden rounded-xl h-10 px-4 bg-[#293038] text-white text-sm font-bold leading-normal tracking-[0.015em] log-out"
             >
               <span class="truncate">Log out</span>
             </button>
+
+            </a>
+            
+
             <div class="bg-center bg-no-repeat aspect-square bg-cover rounded-full size-10"
                     style='margin-right: 100px;'>
                     <svg xmlns="http://www.w3.org/2000/svg" width="205" height="59" viewBox="0 0 205 59" fill="none" role="img" aria-labelledby="apzipk6qwsz5axz4bakgvhoj0r62nhnw" class="hidden lg:block h-12 w-auto text-gray-800 dark:text-gray-300"><title id="apzipk6qwsz5axz4bakgvhoj0r62nhnw">Odin Logo</title>
