--- a/public/styles.css
+++ b/public/styles.css
@@ -63,7 +63,10 @@ input[type="file"] {
 .submit-btn:hover {
     background-color: #1980e6;
 }
-
+#nothaveAccount:hover,#haveAccount:hover {
+    cursor: pointer;
+    color:#e0e0e0;
+}
 .folder-container:hover {
     border: 1px solid #1980e6;
     border-radius: 10px;
@@ -82,10 +85,7 @@ input[type="file"] {
     transform: scale(1.02);
     transition: transform 0.4s ease;
 }
-.file-name:hover {
-    cursor: pointer;
-    color: #10B981;
-}
+
 #createFolderBtn {
     background-color: #1980e6;
 }
