fix: add user to every dbclient model

--- a/views/logIn.ejs
+++ b/views/logIn.ejs
@@ -58,6 +58,7 @@
                     <label class="flex flex-col min-w-40 flex-1">
                         <p class="text-white text-base font-medium leading-normal pb-2">Password</p>
                         <input placeholder="password"
+                        type="password"
                             class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-xl text-white focus:outline-0 focus:ring-0 border-none bg-[#293038] focus:border-none h-14 placeholder:text-[#9dabb8] p-4 text-base font-normal leading-normal"
                             value="" name="password" required />
                     </label>
