--- a/views/files.ejs
+++ b/views/files.ejs
@@ -113,7 +113,7 @@
                             </div>
                             <div class="flex flex-col justify-center">
                                 <p onclick="openFolder(<%=folder.folder_id%>)" class="text-white text-base font-medium leading-normal line-clamp-1 folder-name"><%=folder.name%></p>
-                                <p class="text-[#9dabb8] text-sm font-normal leading-normal line-clamp-2">x files</p>
+                                <p class="text-[#9dabb8] text-sm font-normal leading-normal line-clamp-2">Cloud Folder</p>
                             </div>
                         </div>
                         <!--open, edit and delete a folder -->
