--- a/views/files.ejs
+++ b/views/files.ejs
@@ -267,6 +267,7 @@
 
 <script>
     document.getElementById("createFolderBtn").addEventListener('click',()=>{
+        console.log('createFolder button trigerred-----------')
         const folderName = prompt('Enter name Please');
         if(folderName){
             //get parent id, it can be null
@@ -287,6 +288,7 @@
                 }
             }) //then
         } // if 
+        console.log('create folder btn exit function-------------')
     })
     //open folder function
     function openFolder(folderId) {
@@ -335,7 +337,7 @@
     // delete file function
     function deleteFile(fileId) {
         if(confirm('Are you sure you want to delete this file?')) {
-            fetch(`/files/${fileId}/delete`,{
+            fetch(`/folders/files/${fileId}/delete`,{
                 method: 'POST',
                 headers: {
                     'Content-Type': 'application/x-www-form-urlencoded',
