--- a/views/logIn.ejs
+++ b/views/logIn.ejs
@@ -65,7 +65,7 @@
                 </div>
                
                 <div class="px-4">
-                    <label class="flex gap-x-3 py-3 flex-row">
+                    <label class="flex gap-x-3 py-3 flex-row log-sig-form">
                         <input type="checkbox"
                             class="h-5 w-5 rounded border-[#3c4753] border-2 bg-transparent text-[#1980e6] checked:bg-[#1980e6] checked:border-[#1980e6] checked:bg-[image:--checkbox-tick-svg] focus:ring-0 focus:ring-offset-0 focus:border-[#3c4753] focus:outline-none"
                             />
