--- a/views/files.ejs
+++ b/views/files.ejs
@@ -118,12 +118,12 @@
                         </div>
                         <!--share link section-->
                         <div class="flex flex-col justify-center">
-                            <a target="_blank" id="share-link" class="text-white text-base font-medium leading-normal line-clamp-1 file-name"></a> 
+                            <a title="Share Link" target="_blank" id="share-link-<%=folder.folder_id%>" class="share-link  text-[#9dabb8] text-sm font-normal leading-normal line-clamp-1 file-name"></a> 
                         </div>
                         <!--open, edit and delete a folder -->
                         <div class="flex items-center gap-2 shrink-0">
                             <!--share icon-->
-                            <button onclick="shareFolder(<%=folder.folder_id%>)" class="text-white flex size-7 items-center justify-center hover:text-blue-500" title="Open Folder">
+                            <button  onclick="shareFolder(<%=folder.folder_id%>)" class="share-link text-white flex size-7 items-center justify-center hover:text-blue-500" title="Share Link" >
                                 <svg height="48" viewBox="0 0 48 48" width="48" xmlns="http://www.w3.org/2000/svg"><defs><style>.cls-1{fill:#f6b445;}.cls-2{fill:#fed049;}.cls-3{fill:#d0d7df;}.cls-4{fill:#474c54;}</style></defs><title/><g data-name="45-File-Document-share" id="_45-File-Document-share"><path class="cls-1" d="M39,13H22V7H38a.979.979,0,0,1,1,1Z"/><path class="cls-2" d="M22,7v6H43a4,4,0,0,1,4,4V43a4,4,0,0,1-4,4H5a4,4,0,0,1-4-4V5S1,1,5,1H18s4,0,4,4Z"/><circle class="cls-3" cx="28" cy="38" r="3"/><circle class="cls-3" cx="20" cy="30" r="3"/><circle class="cls-3" cx="28" cy="22" r="3"/><path class="cls-4" d="M43,12H12a1,1,0,0,0,0,2H43a3,3,0,0,1,3,3V43a3,3,0,0,1-3,3H5a3,3,0,0,1-3-3V5.006A2.854,2.854,0,0,1,5,2H18a2.853,2.853,0,0,1,3,3V7a1,1,0,0,0,1,1H38V9a1,1,0,0,0,2,0V8a1.959,1.959,0,0,0-2-2H23V5a4.821,4.821,0,0,0-5-5H5A4.821,4.821,0,0,0,0,5V43a5.006,5.006,0,0,0,5,5H43a5.006,5.006,0,0,0,5-5V17A5.006,5.006,0,0,0,43,12Z"/><path class="cls-4" d="M22.019,26.567A3.947,3.947,0,0,0,20,26a4,4,0,0,0,0,8,3.947,3.947,0,0,0,2.019-.567l2.274,2.274a.977.977,0,0,0,.31.206,4.035,4.035,0,1,0,1.31-1.31.977.977,0,0,0-.206-.31l-2.274-2.274a3.878,3.878,0,0,0,0-4.038l2.274-2.274a.977.977,0,0,0,.206-.31,4.035,4.035,0,1,0-1.31-1.31.977.977,0,0,0-.31.206ZM28,36a2,2,0,1,1-2,2A2,2,0,0,1,28,36ZM18,30a2,2,0,1,1,2,2A2,2,0,0,1,18,30ZM28,20a2,2,0,1,1-2,2A2,2,0,0,1,28,20Z"/></g></svg>                            </button>
                             <!--open icon-->
                             <button onclick="openFolder(<%=folder.folder_id%>)" class="text-white flex size-7 items-center justify-center hover:text-blue-500" title="Open Folder">
@@ -360,8 +360,8 @@
                 }
                 return res.json();
             }).then(response=>{
-                document.getElementById('share-link').innerText=response.url;
-                document.getElementById('share-link').setAttribute('href',response.url);
+                document.getElementById(`share-link-${folderId}`).innerText=response.url;
+                document.getElementById(`share-link-${folderId}`).setAttribute('href',response.url);
             })
     }
     // delete file function
