--- a/views/files.ejs
+++ b/views/files.ejs
@@ -69,6 +69,8 @@
                     placeholder="Search files"
                     class="form-input flex w-full min-w-0 flex-1 resize-none overflow-hidden rounded-xl text-white focus:outline-0 focus:ring-0 border-none bg-[#293038] focus:border-none h-full placeholder:text-[#9dabb8] px-4 rounded-l-none border-l-0 pl-2 text-base font-normal leading-normal"
                     value=""
+                    id="search-input"
+                    
                   />
                 </div>
               </label>
@@ -383,7 +385,15 @@
             
         } //if
     }
-
+    //search input handler
+    document.getElementById('search-input').addEventListener('change',(e)=>{
+        let searchEntry = e.target.value;
+        fetch(`/search?value=${encodeURIComponent(searchEntry)}`).then(res=>{
+            if(res.ok) {
+                console.log('respond okay for now: ',res)
+            }
+        })
+    })
     document.getElementById('uploadBtn').addEventListener('click',()=>{
         window.location.href="/upload<%=currentFolderId!==null?'?folderId='+currentFolderId:''%>"
     })
