--- a/views/files.ejs
+++ b/views/files.ejs
@@ -57,11 +57,13 @@
                     data-size="24px"
                     data-weight="regular"
                   >
+                  <button style="cursor: pointer;" onclick="search()">
                     <svg xmlns="http://www.w3.org/2000/svg" width="24px" height="24px" fill="currentColor" viewBox="0 0 256 256">
                       <path
                         d="M229.66,218.34l-50.07-50.06a88.11,88.11,0,1,0-11.31,11.31l50.06,50.07a8,8,0,0,0,11.32-11.32ZM40,112a72,72,0,1,1,72,72A72.08,72.08,0,0,1,40,112Z"
                       ></path>
                     </svg>
+                </button>
                   </div>
 
                   <!--search files section-->
@@ -304,7 +306,6 @@
     //open folder function
     function openFolder(folderId) {
         window.location.href=`/folders/${folderId}`;
-        console.log('clicked')
     }
     // edit folder function
     function editFolder(folderId,currentName) {
@@ -386,14 +387,17 @@
         } //if
     }
     //search input handler
-    document.getElementById('search-input').addEventListener('change',(e)=>{
-        let searchEntry = e.target.value;
-        fetch(`/search?value=${encodeURIComponent(searchEntry)}`).then(res=>{
-            if(res.ok) {
-                console.log('respond okay for now: ',res)
-            }
-        })
-    })
+    function search() {
+        let searchEntry = document.getElementById('search-input').value;
+            console.log('search: ',searchEntry)
+            fetch(`/search?value=${encodeURIComponent(searchEntry)}`).then(res=>{
+                if(res.ok) {
+                    window.location.href=`/search?value=${encodeURIComponent(searchEntry)}`;
+                    
+                }
+            })
+        
+    }
     document.getElementById('uploadBtn').addEventListener('click',()=>{
         window.location.href="/upload<%=currentFolderId!==null?'?folderId='+currentFolderId:''%>"
     })
